v2.13/_sources/API_ref/VPL_disp_api_struct.rst
.. SPDX-FileCopyrightText: 2019-2020 Intel Corporation
..
.. SPDX-License-Identifier: CC-BY-4.0
..
  Intel(r) Video Processing Library (Intel(r) VPL)

.. _disp_api_struct:

==================================
Dispatcher API Structure Reference
==================================

---
API
---

.. contents::
   :local:
   :depth: 1

mfxDecoderDescription
---------------------

.. doxygenstruct:: mfxDecoderDescription
   :project: DEF_BREATHE_PROJECT
   :members:
   :protected-members:

mfxDeviceDescription
--------------------

.. doxygenstruct:: mfxDeviceDescription
   :project: DEF_BREATHE_PROJECT
   :members:
   :protected-members:

mfxEncoderDescription
---------------------

.. doxygenstruct:: mfxEncoderDescription
   :project: DEF_BREATHE_PROJECT
   :members:
   :protected-members:

mfxImplDescription
------------------

.. doxygenstruct:: mfxImplDescription
   :project: DEF_BREATHE_PROJECT
   :members:
   :protected-members:

mfxVariant
----------

.. doxygenstruct:: mfxVariant
   :project: DEF_BREATHE_PROJECT
   :members:
   :protected-members:

.. doxygenenum:: mfxVariantType
   :project: DEF_BREATHE_PROJECT

mfxVPPDescription
-----------------

.. doxygenstruct:: mfxVPPDescription
   :project: DEF_BREATHE_PROJECT
   :members:
   :protected-members:

mfxAccelerationModeDescription
------------------------------

.. doxygenstruct:: mfxAccelerationModeDescription
   :project: DEF_BREATHE_PROJECT
   :members:
   :protected-members:

mfxImplementedFunctions
-----------------------

.. doxygenstruct:: mfxImplementedFunctions
   :project: DEF_BREATHE_PROJECT
   :members:
   :protected-members:

mfxExtendedDeviceId
-------------------

.. doxygenstruct:: mfxExtendedDeviceId
   :project: DEF_BREATHE_PROJECT
   :members:
   :protected-members:

mfxPoolPolicyDescription
------------------------

.. doxygenstruct:: mfxPoolPolicyDescription
   :project: DEF_BREATHE_PROJECT
   :members:
   :protected-members:

extDeviceUUID
-------------

.. doxygenstruct:: extDeviceUUID
   :project: DEF_BREATHE_PROJECT
   :members:
   :protected-members:
